// Copyright 2024 The XLS Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package xls;

import "xls/ir/xls_value.proto";

message NodeCoverageStatsProto {
  message NodeStats {
    message Loc {
      // Index into 'files' list of the filename this node is from.
      int64 fileno = 1;
      // Line this node is on.
      int64 lineno = 2;
      int64 colno = 3;
    }
    int64 node_id = 1;
    // Node text
    string node_text = 2;
    // Locations associated with this node
    repeated Loc loc = 3;

    // A value with each bit set if the corresponding bit was observed set at
    // any time.
    ValueProto set_bits = 4;
    // The total number of bits this value contains.
    int64 total_bit_count = 5;
    // The total number of bits which were never observed set on this node.
    int64 unset_bit_count = 6;
  }

  repeated NodeStats nodes = 1;
  repeated string files = 2;
}
